adding application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 #server
 server.port=8000
 
+#config
+spring.config.import=file:env.properties
+
 #mongodb
-spring.data.mongodb.uri=mongodb+srv://mangadb:JAOAQzHjDxRC1O1u@cluster0.so2m2im.mongodb.net/space-explorers?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://${DB_USER}:${DB_PASSWORD}@cluster0.so2m2im.mongodb.net/${DB_DATABASE}?retryWrites=true&w=majority
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=test
